[project]
name = "soundcloud-collection-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "gspread>=6.2.1",
    "polars>=1.32.3",
    "requests>=2.32.5",
    "selenium>=4.35.0",
    "textual-dev>=1.8.0",
    "textual>=5.3.0",
    "webdriver-manager>=4.0.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "ruff>=0.12.9",
]
